# hpc-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_debug.sh  build_float.sh  main.cpp
examples/: param1.param  param2.param
src/: CMakeLists.txt  discrete_2d.cpp  discrete_2d.tpp  matrix.cpp  matrix.tpp  mesh2d.cpp
src/include/internal/: arg.hpp  discrete_2d.hpp  helper.hpp  lhs2d.hpp  matrix.hpp  matrix.tpp  mesh2d.hpp  param.hpp  solver.hpp  solver_config.hpp
tests/: CMakeLists.txt  dep_test_utils.cpp  test_discrete_2d.cpp  test_exprtk.cpp  test_matrix.cpp  test_matrix_legacy.cpp  test_mesh2d.cpp  test_param_parse.cpp  test_solver.cpp
tests/data/: param1.param  param2.param
